home page update

--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
             "dest": "/public/assets/$1"
           },
         {
+            "src": "/images/(.*)",
+            "dest": "/public/images/$1"
+          },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
